unificacion repo de front y back

--- a/src/register/registerStyles.css
+++ b/src/register/registerStyles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(135deg, #1f7872, #20b2aa);
+  background-color: #004b37e5;
   height: 100vh;
   margin: 0;
   display: flex;
