--- a/frontend/styles/loginStyles.css
+++ b/frontend/styles/loginStyles.css
@@ -1,21 +1,24 @@
 body {
   font-family: "Poppins", sans-serif;
-  background: linear-gradient(135deg, #20b2aa, #1f7872);
+  background-color: rgb(252, 252, 252);
   height: 100vh;
   margin: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 h1 {
   text-align: center;
-  color: #1f7872;
+  color: white;
 }
 
 form {
-  background: #fff;
+  background: #c0c0c0;
   border-radius: 20px;
+  border-color: #000000;
+  border: 2px solid;
   padding: 3rem 2.5rem;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
   width: 100%;
@@ -43,6 +46,7 @@ button {
   color: white;
   border: none;
   border-radius: 10px;
+  margin: 5px;
   padding: 0.9rem;
   font-weight: 600;
   cursor: pointer;
@@ -63,4 +67,15 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+#inicio {
+  background-color: #1f7872;
+  display: block;
+  width: 100vw;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
 }
