--- a/frontend/styles/loginStyles.css
+++ b/frontend/styles/loginStyles.css
@@ -122,3 +122,17 @@ a:hover {
   justify-content: center;
   margin-bottom: 100px;
 }
+
+.register-btn {
+  margin-top: 10px;
+  background-color: #ffa64d;
+  border: 1px solid black;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.register-btn:hover {
+  background-color: #ffb366;
+}
