--- a/frontend/styles/loginStyles.css
+++ b/frontend/styles/loginStyles.css
@@ -58,7 +58,7 @@ h1 {
 }
 
 form {
-  background: #c0c0c0;
+  background: #D9E2DC;
   border-radius: 20px;
   border-color: #000000;
   border: 2px solid;
