--- a/frontend/styles/usuarios.css
+++ b/frontend/styles/usuarios.css
@@ -1,43 +1,73 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f9f9;
-  margin: 0;
-  padding: 0;
+:root {
+    --verde: #0a5132;
+    --verde-claro: #e8f6ef;
+    --beige: #f5efe6;
+    --acento: #f29d59;
+    --gris: #f0f2f1;
+    --sombra: rgba(0, 0, 0, 0.12);
+    font-family: "Arial", sans-serif;
 }
 
-header nav {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+#encabezado {
+    background: var(--verde);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 32px
+}
+
+header {
+  background: #00B8D9;
+  padding: 8px 0;
+  width: 100%;
+  margin-bottom: 80px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+nav {
+  max-width: 1200px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 30px;
-  background-color: #4db6ac;
-  color: white;
+  padding: 1rem 2rem;
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 1.5rem;
+  color: #1E5F4C;
   font-weight: bold;
-  cursor: pointer;
+}
+
+.logo i {
+  color: #1E5F4C;
+  margin-right: 8px;
 }
 
 nav ul {
-  list-style: none;
   display: flex;
-  gap: 20px;
-  margin: 0;
-  padding: 0;
+  list-style: none;
+  gap: 1.5rem;
 }
 
-nav ul li a {
-  color: white;
+nav a {
   text-decoration: none;
-  font-weight: bold;
+  color: var(--texto);
+  font-weight: 500;
+  transition: color 0.3s;
 }
 
-nav ul li a:hover {
-  text-decoration: underline;
+nav a:hover {
+  color: var(--acento);
 }
-
 h1 {
   text-align: center;
   margin-top: 30px;
@@ -78,32 +108,19 @@ h1 {
   font-size: 14px;
 }
 
-.btn {
-  margin-top: 10px;
-  padding: 8px 12px;
-  border: none;
-  background-color: #4db6ac;
-  color: white;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #399b91;
-}
-
-footer {
-  background-color: #4db6ac;
-  color: white;
+a {
   text-align: center;
-  padding: 15px;
-  margin-top: 40px;
+  color: #E0F7FA;
+  text-decoration: none;
+  font-weight: 500;
+  margin-top: 1rem;
 }
 
-.copy {
-  font-size: 12px;
-  color: #e0f2f1;
+a:hover {
+  text-decoration: underline;
 }
+
+
 
 /* ========= RESPONSIVE ========= */
 
