--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -62,6 +62,10 @@ nav {
   font-size: 1.5rem;
   color: var(--encabezado);
   font-weight: bold;
+  display: flex;            
+  align-items: center;     
+  justify-content: center;   
+  gap: 10px;                
 }
 
 .logo i {
@@ -84,6 +88,13 @@ nav a {
 
 nav a:hover {
   color: var(--acento);
+}
+
+.logo-img {
+  width: 45px;
+  height: 45px;
+  object-fit: contain;
+  align-self: center;
 }
 
 /* ===== HERO ===== */
